Unify async operation handling; apply event delegation; extract constants; implement DRY principle for columns

--- a/lesson8/lesson8-frontend/index.html
+++ b/lesson8/lesson8-frontend/index.html
@@ -17,7 +17,7 @@
       </header>
 
       <!-- Board -->
-      <main class="board">
+      <main class="board" id="board">
         <div class="column">
           <div class="column-header column-header-todo">
             <h2>TO DO</h2>
